--- a/src/partials/unique_components.html
+++ b/src/partials/unique_components.html
@@ -1,147 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+
 <section>
-    <div class="container">
+    <div class="container"> 
 
-        <div class="unique-components-text">
-            <h2 class="title-unique-components">
-                IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="taste-unique-components">TASTE</span> SENSATION
-            </h2>
+    <div class="unique-components-text">
+        <h2 class="title-unique-components">
+            IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="taste-unique-components">TASTE</span> SENSATION
+        </h2>
 
-            <p class="backstory-unique-components">
-                At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the
-                sourcing of
-                the
-                finest ingredients to the careful crafting of each individual piece, every step of our process adds up
-                to
-                one
-                exceptional taste sensation.
-            </p>
-        </div>
+        <p class="backstory-unique-components">
+            At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the
+            sourcing of
+            the
+            finest ingredients to the careful crafting of each individual piece, every step of our process adds up to
+            one
+            exceptional taste sensation.
+        </p>
+    </div>
 
-        <ul class="kinds-unique-components">
-            <li class="block-unique-components">
-                <div class="main-image-unique-components">
-                    <svg class="icon-unique-components">
-                        <use href="../img/milk_choco_tablet_mobile.png"></use>
-                    </svg>
-                    <p class="main-title-unique-components">MILK CHOCOLATE</p>
-                </div>
-                <div class="product-description-unique-components">
-                    <h3 class="second-title-unique-components">MILK CHOCOLATE</h3>
-                    <ul class="button-product-unique-components">
-                        <li><button class="product-unique-components">chocolate</button></li>
-                        <li><button class="the-benefits-unique-components">the benefits</button></li>
-                    </ul>
-                    <p class="second-backstory-unique-components">Milk chocolate is a solid chocolate confectionery
-                        containing cocoa, sugar and milk. It is the most consumed type of
-                        chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times.
-                        Although
-                        four-fifths of all
-                        milk chocolate is sold in the United States and Europe, increasingly large amounts are consumed
-                        in
-                        China and Latin
-                        America.
-                    </p>
-                </div>
-            </li>
+    <ul class="kinds-unique-components">
+        <li class="block-unique-components">
+            <div class="main-image-unique-components">
+                <svg class="icon-unique-components">
+                    <use href="../img/milk_choco_tablet_mobile.png"></use>
+                </svg>
+                <p class="main-title-unique-components">MILK CHOCOLATE</p>
+            </div>
+            <div class="product-description-unique-components">
+                <h3 class="second-title-unique-components">MILK CHOCOLATE</h3>
+                <ul class="button-product-unique-components">
+                    <li><button class="product-unique-components">chocolate</button></li>
+                    <li><button class="the-benefits-unique-components">the benefits</button></li>
+                </ul>
+                <p class="second-backstory-unique-components">Milk chocolate is a solid chocolate confectionery
+                    containing cocoa, sugar and milk. It is the most consumed type of
+                    chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times. Although
+                    four-fifths of all
+                    milk chocolate is sold in the United States and Europe, increasingly large amounts are consumed in
+                    China and Latin
+                    America.
+                </p>
+            </div>
+        </li>
 
-            <li class="block-unique-components">
-                <div class="main-image-unique-components">
-                    <svg class="icon-unique-components">
-                        <use href="../img/milk_tablet_mobile.png"></use>
-                    </svg>
-                    <p class="main-title-unique-components">MILK</p>
-                </div>
-                <div class="product-description-unique-components">
-                    <h3 class="second-title-unique-components">milk</h3>
-                    <ul class="button-product-unique-components">
-                        <li><button class="product-unique-components">milk</button></li>
-                        <li><button class="the-benefits-unique-components">the benefits</button></li>
-                    </ul>
-                    <p class="second-backstory-unique-components">
-                        Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source
-                        of
-                        nutrition for young
-                        mammals (including breastfed human infants) before they are able to digest solid
-                        food.Early-lactation milk, which is
-                        called colostrum, contains antibodies that strengthen the immune system, and thus reduces the
-                        risk
-                        of many diseases.
-                        Milk contains many nutrients, including protein and lactose.
-                    </p>
-                </div>
-            </li>
+        <li class="block-unique-components">
+            <div class="main-image-unique-components">
+                <svg class="icon-unique-components">
+                    <use href="../img/milk_tablet_mobile.png"></use>
+                </svg>
+                <p class="main-title-unique-components">MILK</p>
+            </div>
+            <div class="product-description-unique-components">
+                <h3 class="second-title-unique-components">milk</h3>
+                <ul class="button-product-unique-components">
+                    <li><button class="product-unique-components">milk</button></li>
+                    <li><button class="the-benefits-unique-components">the benefits</button></li>
+                </ul>
+                <p class="second-backstory-unique-components">
+                    Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of
+                    nutrition for young
+                    mammals (including breastfed human infants) before they are able to digest solid
+                    food.Early-lactation milk, which is
+                    called colostrum, contains antibodies that strengthen the immune system, and thus reduces the risk
+                    of many diseases.
+                    Milk contains many nutrients, including protein and lactose.
+                </p>
+            </div>
+        </li>
 
-            <li class="block-unique-components">
-                <div class="main-image-unique-components">
-                    <svg class="icon-unique-components">
-                        <use href="../img/nuts_tablet_mobile.png"></use>
-                    </svg>
-                    <p class="main-title-unique-components">NUTS</p>
-                </div>
-                <div class="product-description-unique-components">
-                    <h3 class="second-title-unique-components">NUTS</h3>
-                    <ul class="button-product-unique-components">
-                        <li><button class="product-unique-components">nuts</button></li>
-                        <li><button class="the-benefits-unique-components">the benefits</button></li>
-                    </ul>
-                    <p class="second-backstory-unique-components">
-                        Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When
-                        eaten
-                        as part of a
-                        nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart
-                        disease.
-                        They’re a good source
-                        of fiber, healthy fats, and plant protein. Plus, they’re great on their own, paired with fruit,
-                        or
-                        added to dishes like
-                        salads, desserts, and grains.
-                    </p>
-                </div>
-            </li>
+        <li class="block-unique-components">
+            <div class="main-image-unique-components">
+                <svg class="icon-unique-components">
+                    <use href="../img/nuts_tablet_mobile.png"></use>
+                </svg>
+                <p class="main-title-unique-components">NUTS</p>
+            </div>
+            <div class="product-description-unique-components">
+                <h3 class="second-title-unique-components">NUTS</h3>
+                <ul class="button-product-unique-components">
+                    <li><button class="product-unique-components">nuts</button></li>
+                    <li><button class="the-benefits-unique-components">the benefits</button></li>
+                </ul>
+                <p class="second-backstory-unique-components">
+                    Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When eaten
+                    as part of a
+                    nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart disease.
+                    They’re a good source
+                    of fiber, healthy fats, and plant protein. Plus, they’re great on their own, paired with fruit, or
+                    added to dishes like
+                    salads, desserts, and grains.
+                </p>
+            </div>
+        </li>
 
-            <li class="block-unique-components">
-                <div class="main-image-unique-components">
-                    <svg class="icon-unique-components">
-                        <use href="../img/s_s_choco_tablet_mobile.png"></use>
-                    </svg>
-                    <p class="main-title-unique-components">SEMI-SWEET CHOCOLATE</p>
-                </div>
-                <div class="product-description-unique-components">
-                    <h3 class="second-title-unique-components">sweet chocolate</h3>
-                    <ul class="button-product-unique-components">
-                        <li><button class="product-unique-components">sweet chocolate</button></li>
-                        <li><button class="the-benefits-unique-components">the benefits</button></li>
-                    </ul>
-                    <p class="second-backstory-unique-components">
-                        Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways to gain an
-                        understanding of this type
-                        of chocolate is to compare it to a different type of chocolate. Semisweet is darker than milk
-                        chocolate. In a taste
-                        comparison, it has a slightly bitter taste whereas milk chocolate is sweeter and more mellow.
-                        This
-                        delectable flavor of
-                        chocolate is very versatile.
-                    </p>
-                </div>
-            </li>
-        </ul>
+        <li class="block-unique-components">
+            <div class="main-image-unique-components">
+                <svg class="icon-unique-components">
+                    <use href="../img/s_s_choco_tablet_mobile.png"></use>
+                </svg>
+                <p class="main-title-unique-components">SEMI-SWEET CHOCOLATE</p>
+            </div>
+            <div class="product-description-unique-components">
+                <h3 class="second-title-unique-components">sweet chocolate</h3>
+                <ul class="button-product-unique-components">
+                    <li><button class="product-unique-components">sweet chocolate</button></li>
+                    <li><button class="the-benefits-unique-components">the benefits</button></li>
+                </ul>
+                <p class="second-backstory-unique-components">
+                    Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways to gain an
+                    understanding of this type
+                    of chocolate is to compare it to a different type of chocolate. Semisweet is darker than milk
+                    chocolate. In a taste
+                    comparison, it has a slightly bitter taste whereas milk chocolate is sweeter and more mellow. This
+                    delectable flavor of
+                    chocolate is very versatile.
+                </p>
+            </div>
+        </li>
+    </ul>
     </div>
 </section>
-
-<section>
-    <h1>hello</h1>
-</section>
-
-</body>
-</html>
-
