--- a/src/css/unique_components.css
+++ b/src/css/unique_components.css
@@ -7,7 +7,7 @@
     margin-right: auto;
     padding-bottom: 24px;
     padding-top: 0;
-    background-color: aquamarine;
+    background-color: #FFFFFF;
 }
 
 .title-unique-components {
@@ -17,7 +17,7 @@
     line-height: 24px;
     letter-spacing: -0.03em;
     text-align: center;
-    color: red;
+    color: #111111;
 }
 
 .taste-unique-components {
