--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -45,7 +45,7 @@
                      rgba(46, 47, 66, 0.7),
                      url('/img/production_desktop@2x.jpg');
                                         }
-
+}
 .subscribe-title {
 
         font-size: 24px;
