--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -3,7 +3,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .reviews-title{
+  .reviews-title {
     margin-bottom: 50px;
   }
 }
@@ -85,6 +85,7 @@
   font-size: 14px;
   line-height: 1.21;
   text-align: center;
+  color: var(--color-black);
   background: none;
   border: 1px solid var(--color-orange);
   border-radius: 100px;
