add hover and focus on price

--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -14,9 +14,7 @@
           />
           <h3 class="products-caption">Orange</h3>
           <p class="products-text">Dark chocolate</p>
-          <div class="price-container">
-            <span class="products-price">45 UAH</span>
-          </div>
+            <button class="products-btn">45 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -27,9 +25,7 @@
           />
           <h3 class="products-caption">APPLE&CRANBERRY</h3>
           <p class="products-text">Milk chocolate</p>
-          <div class="price-container">
-            <span class="products-price">50 UAH</span>
-          </div>
+          <button class="products-btn">50 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -40,9 +36,7 @@
           />
           <h3 class="products-caption">Lime&sea salt</h3>
           <p class="products-text">Dark chocolate</p>
-          <div class="price-container">
-            <span class="products-price">66 UAH</span>
-          </div>
+          <button class="products-btn">66 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -53,9 +47,7 @@
           />
           <h3 class="products-caption">Pineapple</h3>
           <p class="products-text">Dark chocolate</p>
-          <div class="price-container">
-            <span class="products-price">54 UAH</span>
-          </div>
+          <button class="products-btn">54 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -66,9 +58,7 @@
           />
           <h3 class="products-caption">Classic</h3>
           <p class="products-text">Milk chocolate</p>
-          <div class="price-container">
-            <span class="products-price">45 UAH</span>
-          </div>
+          <button class="products-btn">45 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -79,9 +69,7 @@
           />
           <h3 class="products-caption">Honey</h3>
           <p class="products-text">Milk chocolate</p>
-          <div class="price-container">
-            <span class="products-price">50 UAH</span>
-          </div>
+          <button class="products-btn">50 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -92,9 +80,7 @@
           />
           <h3 class="products-caption">Roasted fruits</h3>
           <p class="products-text">Dark chocolate</p>
-          <div class="price-container">
-            <span class="products-price">66 UAH</span>
-          </div>
+          <button class="products-btn">66 UAH</button>
         </li>
         <li class="products-item swiper-slide">
           <img
@@ -105,9 +91,7 @@
           />
           <h3 class="products-caption">Classic</h3>
           <p class="products-text">White chocolate</p>
-          <div class="price-container">
-            <span class="products-price">54 UAH</span>
-          </div>
+          <button class="products-btn">54 UAH</button>
         </li>
       </ul>
       <div class="products-swiper-pagination swiper-pagination"></div>
