header hover focus

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -179,6 +179,12 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+
+    transition: var(--time-duration) var(--time-distribution);
+  }
+
+  .nav-list-link:is(:hover, :focus) {
+    color: var(--color-orange);
   }
 
   .nav-soc-icon {
