--- a/src/css/base.css
+++ b/src/css/base.css
@@ -4,6 +4,7 @@
   --color-orange: rgba(253, 146, 34, 1);
   --color-white: rgba(255, 255, 255, 1);
   --color-light-orange: rgba(252, 241, 224, 1);
+  --color-grey: #fafafa;
 
   --time-distribution: cubic-bezier(0.4, 0, 0.2, 1);
   --time-duration: 250ms;
