--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -6,7 +6,7 @@ body {
   line-height: 1.3;
 
   color: black;
-  background-color: #e2e2e2;
+  background-color: var(--color-grey);
   letter-spacing: -0.02em;
 
   margin: 0;
