--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="container top-sallers-cnt">
+    <div class="container" id="#top-sellers">
         <h2 class="title">Top
     <span class="title-logo">Sellers</span>
 </h2>
