--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="container" id="#top-sellers">
+    <div class="container" id="top-sellers">
         <h2 class="title">Top
     <span class="title-logo">Sellers</span>
 </h2>
@@ -12,7 +12,7 @@
     <source srcset="/img/buy_choco_nuts_tablet.jpg , /img/buy_choco_nuts_tablet@2x.jpg 2x" media="(min-width: 768px)">
     <source srcset="/img/buy_choco_nuts_mobile.jpg , /img/buy_choco_nuts_mobile@2x.jpg 2x" media="(max-width: 767px)">
     <img 
-    class="img-chocolate first"
+    class="img-chocolate"
     src="/img/buy_choco_nuts_mobile.jpg" 
     alt="coffee">
 </picture>
@@ -23,13 +23,13 @@
     <source srcset="/img/buy_choco_marm_desktop.jpg , /img/buy_choco_marm_desktop@2x.jpg 2x" media="(min-width: 1200px)">
     <source srcset="/img/buy_choco_marm_tablet.jpg , /img/buy_choco_marm_tablet@2x.jpg 2x" media="(min-width: 768px)">
     <source srcset="/img/buy_choco_marm_mobile.jpg , /img/buy_choco_marm_mobile@2x.jpg 2x" media="(max-width: 767px)">
-    <img class="img-chocolate second" src="/img/buy_choco_marm_mobile.jpg" alt="nuts">
+    <img class="img-chocolate" src="/img/buy_choco_marm_mobile.jpg" alt="nuts">
 </picture>
 </li>
 
 <li>
     <img 
-    class="img-chocolate last"
+    class="img-chocolate"
     srcset="/img/buy_choco_desktop.jpg 1x, /img/buy_choco_desktop@2x.jpg 2x"
     src="/img/buy_choco_desktop.jpg" 
     alt="chocolate">
