--- a/src/css/top_sellers.css
+++ b/src/css/top_sellers.css
@@ -1,4 +1,3 @@
-
 .title {
 font-weight: 600;
 font-size: 24px;
@@ -27,7 +26,8 @@ color: var(--color-black);
         width: 335px;
     }
     .img-chocolate {
-        width: 335px; 
+        width: 335px;
+        border-radius: 15px; 
     }
     .blocks-imag {
         display: flex;
@@ -48,8 +48,8 @@ color: var(--color-black);
 }
 @media screen and (min-width: 768px){
     .img-chocolate {
-        width: 344px;
-        height: 464px; 
+        width: 344px; 
+        border-radius: 15px;
     }
     .blocks-imag {
         display: flex;
@@ -77,7 +77,7 @@ color: var(--color-black);
     } 
     .img-chocolate {
         width: 368px;
-        height: 464px; 
+        border-radius: 15px;
     }
     .blocks-imag {
         display: flex;
