--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -29,7 +29,7 @@
 
 <li>
     <img 
-    class="img-chocolate"
+    class="img-chocolate last"
     srcset="/img/buy_choco_desktop.jpg 1x, /img/buy_choco_desktop@2x.jpg 2x"
     src="/img/buy_choco_desktop.jpg" 
     alt="chocolate">
