--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,7 @@
     </h1>
     <div class="hero-btn-item">
       <div class="hero-button-list">
-        <button type="button" class="hero-button сolored" data-modal-open>
+        <button type="button" class="hero-button сolored" data-hero-modal-open>
           Buy now
         </button>
         <a href="#how-its-made" class="hero-button transparent"
@@ -28,17 +28,17 @@
 </section>
 
 <!-- MODAL  -->
-<div class="hero-backdrop is-hidden" data-modal>
+<div class="hero-backdrop is-hidden" data-hero-modal>
   <div class="hero-modal">
-    <button type="button" class="btn-modal-close" data-modal-close>
-      <svg class="hero-modal-icon" width="12" height="12">
+    <button type="button" class="btn-modal-close" data-hero-modal-close>
+      <svg class="hero-modal-icon">
         <use href="./img/icons.svg#icon-close"></use>
       </svg>
     </button>
 
     <form name="hero-buy-now">
       <h2><span class="color-title-hero">bUY</span> nOW</h2>
-      <div class="slide-hero-modal reviews-swiper swiper">
+      <div class="slide-hero-modal hero-swiper swiper">
         <ul class="swiper-wrapper">
           <li class="img-box-hero swiper-slide">
             <picture>
@@ -102,7 +102,7 @@
             <div class="choco-heft"><p>300 g</p></div>
           </li>
         </ul>
-        <div class="reviews-swiper-pagination swiper-pagination"></div>
+        <div class="hero-swiper-pagination swiper-pagination"></div>
       </div>
 
       <div class="item-form-hero">
@@ -131,20 +131,26 @@
           placeholder="Enter your email"
         />
       </div>
-      <div class="item-form-hero">
+      <div class="item-form-hero hero-number">
         <label for="hero-form-number">Phone number</label>
-        <input
-          type="number"
-          name="hero-form-number"
-          id="hero-form-number"
-          placeholder="Phone number"
-        />
+        <div class="icons-hero-modal">
+          <input
+            type="tel"
+            name="hero-form-number"
+            id="hero-form-number"
+            placeholder="Phone number"
+          />
+          <div class="icon-ua-phone">
+            <span class="flag-hero"></span>
+            <span class="number-hero">+380</span>
+          </div>
+        </div>
       </div>
 
       <div class="item-form-hero">
         <label for="hero-form-number">Card number</label>
         <input
-          type="number"
+          type="text"
           name="hero-form-number"
           id="hero-form-number"
           placeholder="Enter card"
