--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -51,7 +51,7 @@
 
             <ul class="footer-lisst-nav">
                 <li class="footer-lisst-item">
-                    <a class="footer-lisst-icon" href="../index.html">Home</a>
+                    <a class="footer-lisst-icon" href="https://pashokgonchar.github.io/project_9/">Home</a>
                 </li>
                 <li class="footer-lisst-item">
                     <a class="footer-lisst-icon" href="#how-its-made">How it's made?</a>
