--- a/src/css/unique_components.css
+++ b/src/css/unique_components.css
@@ -1,16 +1,24 @@
 @media screen and (min-width: 768px) {
   .container-unique-components {
       padding: 0 20px;
+      max-width: 704px;
     }
   }
+
+@media screen and (min-width: 1200px) {
+    .container-unique-components {
+        padding: 0 20px;
+        max-width: 1136px;
+      }
+    }
   
   
 .unique-components-text {
   width: 100%;
-  max-width: 335px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 0;
+  max-width: 335px;
 }
   
 .title-unique-components {
