--- a/src/css/unique_components.css
+++ b/src/css/unique_components.css
@@ -4,6 +4,12 @@
     }
   }
 
+  @media screen and (min-width: 1200px) {
+    .container-unique-components {
+        padding: 0 20px;
+      }
+    }
+
 .unique-components-text {
   width: 100%;
   margin-left: auto;
