--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -37,7 +37,7 @@
 </ul>
 <div class="text-btm">
 <p class="text-about-chocolate-two">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
-<button class="btn-buy-now" type="buttom">Buy now</button>
+<button class="btn-buy-now colored" type="buttom" data-hero-modal-open>Buy now</button>
 </div>
 
 </div>
